--- a/src/css-components/topbar.css
+++ b/src/css-components/topbar.css
@@ -13,7 +13,7 @@
   top: 0;
   z-index: 100;
   background-color: var(--bg);
-  height: 65px;
+  height: var(--header-height);
   /* max-width: 1114px; */
 }
 .topbar-logo {
